fix spacing for component

--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -25,7 +25,7 @@
 
 .StickTop {
     position: sticky;
-    top: 0;
+    bottom: 0;
 }
 
 
